--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ header{
     max-width: 100%;
     height: 110vh;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: flex-end;
     padding: 60px;
@@ -26,7 +26,22 @@ header .banner{
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
+    padding: 0 150px 70px 0;
+
+    
+
+}
+.menu img{
+    height: 80px;
+    width: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-self:center;
+    align-items: center;
     padding-bottom: 30px;
+    margin-bottom: 320px;
+    margin-right: 600px;
+    
     
 
 }
@@ -52,17 +67,31 @@ section .displaytext{
     flex-direction: column;
     height: 470px;
     justify-content:center; 
-    
+    align-items: center;
     
 }
 section .display-text{
     font-family: 'playfair display', serif;
     color: white;
-    
+    padding-top: 30px;
+    display: flex;
+    flex-direction: column;
+    margin-right: 550px;
+    text-align: justify;
+    text-indent: 8px;
 }
 section .display-txt{
     font-family: 'playfair display', serif;
     color: white;
+    font-size: 30px;
+    font-weight: normal;
+    font-style: italic;
+    line-height: 50px;
+    
+}
+.display-txt span{
+    font-size: 60px;
+    font-weight: bolder;
 }
  section .images{
     display: flex;
@@ -129,11 +158,22 @@ section .images img{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-left:30px ;
+    
+}
+.article-text .art{
     text-align: justify;
     text-align-last: justify;
-    padding-left:30px ;
     line-height: 30px;
     font-size: 16px;
+}
+
+.article-text p{
+ font-size: 30px;
+ font-family: 'playfair display',open sans, sans-serif ;
+ font-style: oblique;
+ color: #d9b1b3;
+ padding-top: 30px;
 }
 .collections{
     background-color: #d9b1b3;
